--- a/BSiNS/Src/scr_XMLNalogPovrata.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogPovrata.fx.yaml
@@ -417,7 +417,7 @@
             ZIndex: =4
 
     com_PovModal As com_Modal:
-        IsNabavniNalog: =true
+        IsPovrat: =true
         LineId: =com_PovGalleries.SelectedLine.Line_No
         LotNo: =com_PovGalleries.SelectedEntry.LOT_No
         LotNoPropVisible: =false
