--- a/BSiNS/Src/Components/com_Modal.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal.fx.yaml
@@ -697,17 +697,8 @@ com_Modal As CanvasComponent:
                                             Quantity_NewLOT: Value(-inp_potrebnoQty_2.Value)
                                         }
                                     );
-                                    If(
-                                        Value(inp_potrebnoQty_2.Value) > 0 && !Prelot,
-                                        Set(
-                                            Prelot,
-                                            true
-                                        ),
-                                        Set(
-                                            Prelot,
-                                            false
-                                        )
-                                    );
+                                    If(CountRows(Filter(colEntries, Quantity_NewLOT > 0)) > 0, Set(Prelot, true),Set(Prelot, false))
+                                    
                                 )
                             );
                             Reset(inp_rezQty_2);
