--- a/BSiNS/Src/Components/com_Modal.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal.fx.yaml
@@ -697,7 +697,7 @@ com_Modal As CanvasComponent:
                                             Quantity_NewLOT: Value(-inp_potrebnoQty_2.Value)
                                         }
                                     );
-                                    If(CountRows(Filter(colEntries, Quantity_NewLOT > 0)) > 0, Set(Prelot, true),Set(Prelot, false))
+                                    Set(Prelot, CountRows(Filter(colEntries, -(Quantity_NewLOT) > 0)) > 0);
                                     
                                 )
                             );
