--- a/BSiNS/Src/Components/com_Footer.fx.yaml
+++ b/BSiNS/Src/Components/com_Footer.fx.yaml
@@ -224,9 +224,17 @@ com_Footer As CanvasComponent:
                             NotificationType.Success,
                             2000
                         );
-                        PrintLOT.Run(com_Footer.JSONData);
+                         Patch(
+                            Counters, 
+                            varExistingRecord,
+                            { CounterValue: Counter }
+                        )
                         
                     );
+                    
+                    
+                    
+                    
                     Set(
                         isLoading,
                         false
