--- a/BSiNS/Src/Components/com_Galleries.fx.yaml
+++ b/BSiNS/Src/Components/com_Galleries.fx.yaml
@@ -243,7 +243,7 @@ com_Galleries As CanvasComponent:
                             {
                                 Journal_Template_Name: ThisItem.Journal_Template_Name,
                                 Journal_Batch_Name: ThisItem.Journal_Batch_Name,
-                                'Line_No.': Text((ThisItem.Line_No * Counter) + 1),
+                                'Line_No.': Text(Counter),//Text((ThisItem.Line_No * Counter) + 1),
                                 'Document_No.': ThisItem.'Document_No.',
                                 Description: ThisItem.Description,
                                 Source_Type: ThisItem.Source_Type,
@@ -281,7 +281,7 @@ com_Galleries As CanvasComponent:
                         Reset(glr_Lines);
                         Set(
                             SelectedLine,
-                            LookUp(colLines, 'Line_No.' = Text((Counter * 10000) + 1))
+                            LookUp(colLines, 'Line_No.' = Text(Counter))//Text((Counter * 10000) + 1))
                         );
                     Visible: =!com_Galleries.VisibleResEntryList && com_Galleries.AddNew && !IsBlank(LookUp(lockedItems, lineId = ThisItem.'Line_No.'))
                     Width: =32
