--- a/BSiNS/Src/Components/com_Footer.fx.yaml
+++ b/BSiNS/Src/Components/com_Footer.fx.yaml
@@ -135,6 +135,7 @@ com_Footer As CanvasComponent:
                             NotificationType.Error,
                             2000
                         ),
+                        Notify("source: " & SelectedQueue & " dest: " & ReadyForNAVProcessing);
                         ChangeXmlStatus.Run(
                             SelectedFile,
                             SelectedQueue,
