--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -24,7 +24,7 @@
                     NotificationType.Error,
                     2000
                 ),
-                Notify("source: " & SelectedQueue & " dest: " & InProgress);
+                Notify("source: " & SelectedQueue & " dest: " & InProgress & " name" & SelectedFile );
         
                 If(
                     SelectedQueue = ReadyForProcessing,
