--- a/BSiNS/Src/scr_XMLNalogPovrata.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogPovrata.fx.yaml
@@ -8,7 +8,7 @@
             true
         );
         
-        Set(reportFileContent, Blank());
+        //Set(reportFileContent, Blank());
         
         If(
             !IsBlank(reportFileContent),
